--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,46 +14,60 @@ if(NOT CMAKE_GENERATOR MATCHES "Make|Ninja")
   set(CMAKE_CONFIGURATION_TYPES Release Debug SIMDTest SIMDTestDebug SIMDBench CACHE STRING "" FORCE)
 endif()
 
-#===================================================================================================
-# Setup project
-#===================================================================================================
+##===================================================================================================
+## Setup project
+##===================================================================================================
 project(Boost.SIMD CXX)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
-#===================================================================================================
-# Prevent in-source build
-#===================================================================================================
+##===================================================================================================
+## Prevent in-source build
+##===================================================================================================
 if(${PROJECT_SOURCE_DIR} STREQUAL ${PROJECT_BINARY_DIR})
-  message ( FATAL_ERROR "Building in-source, not recommended! Build in a separate directory."
-          )
+  message( FATAL_ERROR "Building in-source, not recommended! Build in a separate directory." )
 endif()
 
-#===================================================================================================
-# Search for packages.
-#===================================================================================================
-find_package(Boost   QUIET)
+##===================================================================================================
+## Search for packages.
+##===================================================================================================
+find_package(Boost   1.58)
 find_package(Doxygen QUIET)
 
-#===================================================================================================
-# Install pre-commit git hook
-#===================================================================================================
+##===================================================================================================
+## Install pre-commit git hook
+##===================================================================================================
 execute_process(COMMAND ${CMAKE_COMMAND} -E copy
                 ${PROJECT_SOURCE_DIR}/script/git/pre-commit
                 ${PROJECT_SOURCE_DIR}/.git/hooks
                )
 
-#===================================================================================================
-# Compute version string and mode
-#===================================================================================================
+##===================================================================================================
+## Compute version string and mode
+##===================================================================================================
 include(parse_revision)
 
-#===================================================================================================
-# Setup subdirectories
-#===================================================================================================
-include_directories(include)
-#add_subdirectory(benchmark)
-add_subdirectory(doc)
-#add_subdirectory(example)
+##===================================================================================================
+## Add include directories
+##===================================================================================================
+include_directories ( ${PROJECT_SOURCE_DIR}/include
+                      ${Boost_INCLUDE_DIRS}
+                      ${PROJECT_SOURCE_DIR}/deps/include
+                    )
 
+##===================================================================================================
+## Setup Documentation
+##===================================================================================================
+add_subdirectory(doc)
+
+##===================================================================================================
+## Setup Unit & Coverage Test
+##===================================================================================================
+add_custom_target(tests)
+add_custom_target(unit)
+
+include(coverage)
 enable_testing()
+enable_coverage(boost.simd)
+add_dependencies(tests unit)
+
 #add_subdirectory(test)
