Add information about SIMD extensions limits
This sructure gathers information about type and size
boudnaries for any given SIMD extension.

--- a/test/architecture/CMakeLists.txt
+++ b/test/architecture/CMakeLists.txt
@@ -14,6 +14,7 @@ add_definitions(-DBOOST_ENABLE_ASSERT_HANDLER)
 
 set ( SOURCES
       tags.cpp
+      limits.cpp
     )
 
 make_unit( "boost.simd.architecture" ${SOURCES})
