--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ add_subdirectory(doc)
 ##===================================================================================================
 ## Setup Unit & Coverage Test
 ##===================================================================================================
+include(CTest)
 add_custom_target(tests)
 add_custom_target(unit)
 
