--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,4 +6,6 @@
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
 
+include(make_unit)
+include(make_coverage)
 add_subdirectory(architecture)
