--- a/test/constant/CMakeLists.txt
+++ b/test/constant/CMakeLists.txt
@@ -6,14 +6,5 @@
 ##                        See accompanying file LICENSE.txt or copy at
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
-include(setup)
-include(make_unit)
-include(make_coverage)
 
-set(CMAKE_BUILD_TYPE "Debug")
-
-## Add all test folders
-add_subdirectory(api)
-add_subdirectory(architecture)
-add_subdirectory(constant)
-add_subdirectory(function)
+add_subdirectory(scalar)
