Add additional version 1.59 for boost in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ endif()
 ##===================================================================================================
 ## Search for packages.
 ##===================================================================================================
+set(Boost_ADDITIONAL_VERSIONS "1.59")
 find_package(Boost   1.58)
 find_package(Doxygen QUIET)
 
