--- a/test/api/CMakeLists.txt
+++ b/test/api/CMakeLists.txt
@@ -11,6 +11,7 @@ add_definitions(-DBOOST_ENABLE_ASSERT_HANDLER)
 
 set ( SOURCES
       cardinal_of.cpp
+      logical.cpp
     )
 
 make_unit( "boost.simd.api" ${SOURCES})
