--- a/test/constant/scalar/CMakeLists.txt
+++ b/test/constant/scalar/CMakeLists.txt
@@ -11,10 +11,9 @@ add_definitions(-DBOOST_ENABLE_ASSERT_HANDLER)
 set ( SOURCES
   allbits.cpp
   bitincrement.cpp
-  c180.cpp
+  constant.cpp
   cgold.cpp
   eight.cpp
-  eleven.cpp
   eps.cpp
   fact_10.cpp
   fact_11.cpp
@@ -26,9 +25,7 @@ set ( SOURCES
   fact_8.cpp
   fact_9.cpp
 ##  false.cpp
-  fifteen.cpp
   five.cpp
-  fiveo_8.cpp
   four.cpp
   fourthrooteps.cpp
   goldbar.cpp
@@ -36,7 +33,6 @@ set ( SOURCES
   greatestnoninteger.cpp
   half.cpp
   halfeps.cpp
-  hundred.cpp
   inf.cpp
   ldexpmask.cpp
   limitexponent.cpp
@@ -63,7 +59,6 @@ set ( SOURCES
   mlogeps2.cpp
   mnine.cpp
   mone.cpp
-  moneo_6.cpp
   mseven.cpp
   msix.cpp
   mten.cpp
@@ -76,27 +71,16 @@ set ( SOURCES
   nbmantissabits.cpp
   nine.cpp
   one.cpp
-  oneo_10.cpp
-  oneo_120.cpp
-  oneo_12.cpp
-  oneo_15.cpp
-  oneo_16.cpp
-  oneo_180.cpp
-  oneo_5.cpp
-  oneo_6.cpp
-  oneo_7.cpp
-  oneo_8.cpp
-  oneo_9.cpp
   oneosqrt5.cpp
   oneosqrteps.cpp
   oneotwoeps.cpp
   pi.cpp
   pio_2.cpp
   quarter.cpp
+  ratio.cpp
   seven.cpp
   signmask.cpp
   six.cpp
-  sixteen.cpp
   smallestposval.cpp
   splitfactor.cpp
   sqrt_1o_5.cpp
@@ -109,14 +93,9 @@ set ( SOURCES
   ten.cpp
   third.cpp
   thirdrooteps.cpp
-  thousand.cpp
   three.cpp
   threeeps.cpp
 ##  true.cpp
-  twelve.cpp
-  twenty.cpp
-  twoofive.cpp
-  twothird.cpp
   twoto31.cpp
   twotom10.cpp
   twotonmb.cpp
