True and False constants

--- a/test/constant/scalar/CMakeLists.txt
+++ b/test/constant/scalar/CMakeLists.txt
@@ -24,7 +24,7 @@ set ( SOURCES
   fact_7.cpp
   fact_8.cpp
   fact_9.cpp
-##  false.cpp
+  false.cpp
   five.cpp
   four.cpp
   fourthrooteps.cpp
@@ -95,7 +95,7 @@ set ( SOURCES
   thirdrooteps.cpp
   three.cpp
   threeeps.cpp
-##  true.cpp
+  true.cpp
   twoto31.cpp
   twotom10.cpp
   twotonmb.cpp
