--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-4.8']
-      env: TOOLSET=g++-4.8 SIMD_EXT=-msse2
+      env: CXX_STD=11 TOOLSET=g++-4.8 SIMD_EXT=-msse2
 
     - os: linux
       compiler: gcc
@@ -17,7 +17,7 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-4.8']
-      env: TOOLSET=g++-4.8 SIMD_EXT=-mavx
+      env: CXX_STD=11 TOOLSET=g++-4.8 SIMD_EXT=-mavx
 
     - os: linux
       compiler: gcc
@@ -25,7 +25,7 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-4.9']
-      env: TOOLSET=g++-4.9 SIMD_EXT=-msse2
+      env: CXX_STD=11 TOOLSET=g++-4.9 SIMD_EXT=-msse2
 
     - os: linux
       compiler: gcc
@@ -33,7 +33,7 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-4.9']
-      env: TOOLSET=g++-4.9 SIMD_EXT=-mavx
+      env: CXX_STD=11 TOOLSET=g++-4.9 SIMD_EXT=-mavx
 
     - os: linux
       compiler: gcc
@@ -41,7 +41,7 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-5']
-      env: TOOLSET=g++-5 SIMD_EXT=-msse2
+      env: CXX_STD=11 TOOLSET=g++-5 SIMD_EXT=-msse2
 
     - os: linux
       compiler: gcc
@@ -49,7 +49,15 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-5']
-      env: TOOLSET=g++-5 SIMD_EXT=-mavx
+      env: CXX_STD=14 TOOLSET=g++-5 SIMD_EXT=-msse2
+
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-5']
+      env: CXX_STD=11 TOOLSET=g++-5 SIMD_EXT=-mavx
 
     - os: linux
       compiler: clang
@@ -57,7 +65,7 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.5']
           packages: ['clang-3.5']
-      env: TOOLSET=clang++-3.5 SIMD_EXT=-msse2
+      env: CXX_STD=11 TOOLSET=clang++-3.5 SIMD_EXT=-msse2
 
     - os: linux
       compiler: clang
@@ -65,7 +73,7 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.5']
           packages: ['clang-3.5']
-      env: TOOLSET=clang++-3.5 SIMD_EXT=-mavx
+      env: CXX_STD=11 TOOLSET=clang++-3.5 SIMD_EXT=-mavx
 
     - os: linux
       compiler: clang
@@ -73,7 +81,7 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.6']
           packages: ['clang-3.6']
-      env: TOOLSET=clang++-3.6 SIMD_EXT=-msse2
+      env: CXX_STD=11 TOOLSET=clang++-3.6 SIMD_EXT=-msse2
 
     - os: linux
       compiler: clang
@@ -81,7 +89,19 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.6']
           packages: ['clang-3.6']
-      env: TOOLSET=clang++-3.6 SIMD_EXT=-mavx
+      env: CXX_STD=11 TOOLSET=clang++-3.6 SIMD_EXT=-mavx
+
+    - os: linux
+      compiler: clang
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.6']
+          packages: ['clang-3.6']
+      env: CXX_STD=14 TOOLSET=clang++-3.6 SIMD_EXT=-msse2
+
+    - os: osx
+      compiler: clang
+      env: CXX_STD=11 TOOLSET=clang++ SIMD_EXT=-msse2
 
 # Install boost
 before_install:
@@ -92,7 +112,7 @@ before_install:
 before_script:
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_CXX_COMPILER=$TOOLSET -DCMAKE_CXX_FLAGS=$SIMD_EXT
+  - cmake .. -DCMAKE_CXX_COMPILER=$TOOLSET -DCMAKE_CXX_FLAGS=$SIMD_EXT -DCXX_STD=$CXX_STD
 
 # Build unit and run test
 script:
