--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,8 @@ add_custom_target(tests)
 add_custom_target(unit)
 
 include(coverage)
-enable_testing()
+include( CTest )
+
 enable_coverage(boost.simd)
 add_dependencies(tests unit)
 
