adding b_xor alias to bitwise_xor

--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -372,6 +372,7 @@ set ( SOURCES
    remfix.cpp
    itrunc.cpp
    angle.cpp
+   b_xor.cpp
   )
 
 make_unit( "boost.simd.function.scalar"     ${SOURCES})
