adding signbit as an alias of is_negative

--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -430,6 +430,7 @@ set ( SOURCES
    b_xor.cpp
    is_not_finite.cpp
    is_not_invalid.cpp
+   signbit.cpp
   )
 
 make_unit( "boost.simd.function.scalar"   ${SOURCES})
