--- a/test/sdk/CMakeLists.txt
+++ b/test/sdk/CMakeLists.txt
@@ -1,19 +1,15 @@
 ##===================================================================================================
-##                 Copyright 2012 - 2015   NumScale SAS
+##                               Copyright 2015 NumScale SAS
 ##
 ##                   Distributed under the Boost Software License, Version 1.0.
 ##                        See accompanying file LICENSE.txt or copy at
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
-include(setup)
-include(make_unit)
-include(make_coverage)
 
-set(CMAKE_BUILD_TYPE "Debug")
+set ( SOURCES
+      as_logical.cpp
+      real_of.cpp
+    )
 
-## Add all test folders
-add_subdirectory(api)
-add_subdirectory(architecture)
-add_subdirectory(constant)
-add_subdirectory(function)
-add_subdirectory(sdk)
+make_unit( "boost.simd.sdk" ${SOURCES})
+make_coverage("boost.simd.sdk" ${SOURCES})
