doc correction for trigo

--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -230,6 +230,7 @@ set ( SOURCES
    is_not_real.cpp
    is_odd.cpp
    is_ord.cpp
+   is_lessgreater.cpp
    is_positive.cpp
    is_real.cpp
    is_unord.cpp
