--- a/test/api/pack/CMakeLists.txt
+++ b/test/api/pack/CMakeLists.txt
@@ -1,10 +1,22 @@
 ##===================================================================================================
-##                               Copyright 2015   NumScale SAS
+##                 Copyright 2009 - 2015   LRI    UMR 8623 CNRS/Univ Paris Sud XI
+##                 Copyright 2012 - 2015   NumScale SAS
 ##
 ##                   Distributed under the Boost Software License, Version 1.0.
 ##                        See accompanying file LICENSE.txt or copy at
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
 
-add_subdirectory(meta)
-add_subdirectory(pack)
+add_definitions(-DBOOST_ENABLE_ASSERT_HANDLER)
+
+set ( SOURCES
+      concepts.cpp
+      hierarchy.cpp
+      iterators.cpp
+      proxy.cpp
+    )
+
+make_unit( "boost.simd.api.pack" ${SOURCES})
+make_coverage("boost.simd.api.pack" ${SOURCES})
+
+add_subdirectory(ctor)
