--- a/test/api/pack/ctor/CMakeLists.txt
+++ b/test/api/pack/ctor/CMakeLists.txt
@@ -6,5 +6,15 @@
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
 
-add_subdirectory(meta)
-add_subdirectory(pack)
+add_definitions(-DBOOST_ENABLE_ASSERT_HANDLER)
+
+set ( SOURCES
+      list.cpp
+      default.cpp
+      pointer.cpp
+      iterator.cpp
+      splat.cpp
+    )
+
+make_unit( "boost.simd.api.pack.ctor" ${SOURCES})
+make_coverage("boost.simd.api.pack.ctor" ${SOURCES})
