Add test for pack and related operations

--- a/test/api/pack/CMakeLists.txt
+++ b/test/api/pack/CMakeLists.txt
@@ -6,5 +6,16 @@
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
 
-add_subdirectory(meta)
-add_subdirectory(pack)
+add_definitions(-DBOOST_ENABLE_ASSERT_HANDLER)
+
+set ( SOURCES
+      concepts.cpp
+      hierarchy.cpp
+      iterators.cpp
+      proxy.cpp
+    )
+
+make_unit( "boost.simd.api.pack" ${SOURCES})
+make_coverage("boost.simd.api.pack" ${SOURCES})
+
+add_subdirectory(ctor)
