--- a/test/api/meta/CMakeLists.txt
+++ b/test/api/meta/CMakeLists.txt
@@ -1,10 +1,16 @@
 ##===================================================================================================
-##                 Copyright 2012 - 2015   NumScale SAS
+##                               Copyright 2015   NumScale SAS
 ##
 ##                   Distributed under the Boost Software License, Version 1.0.
 ##                        See accompanying file LICENSE.txt or copy at
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
 
-add_subdirectory(meta)
-add_subdirectory(pack)
+set ( SOURCES
+      cardinal_of.cpp
+      is_scalar.cpp
+      logical.cpp
+    )
+
+make_unit( "boost.simd.api.meta" ${SOURCES})
+make_coverage("boost.simd.api.meta" ${SOURCES})
