incs and decs as aliases for oneplus and minusone as they are saturated

--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -428,6 +428,8 @@ set ( SOURCES
    b_xor.cpp
    is_not_finite.cpp
    is_not_invalid.cpp
+   decs.cpp
+   incs.cpp
   )
 
 make_unit( "boost.simd.function.scalar"   ${SOURCES})
