--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -429,6 +429,7 @@ set ( SOURCES
    is_not_invalid.cpp
    decs.cpp
    incs.cpp
+   pluss.cpp
   )
 
 make_unit( "boost.simd.function.scalar"   ${SOURCES})
