adding stirling for gamma

--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -430,6 +430,8 @@ set ( SOURCES
    decs.cpp
    incs.cpp
    pluss.cpp
+#eulerian
+   stirling.hpp
   )
 
 make_unit( "boost.simd.function.scalar"   ${SOURCES})
