forgotten stirling kernel

--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -431,7 +431,7 @@ set ( SOURCES
    incs.cpp
    pluss.cpp
 #eulerian
-   stirling.hpp
+   stirling.cpp
   )
 
 make_unit( "boost.simd.function.scalar"   ${SOURCES})
