gamma and tgamma are 2 versions of the gamma functions

--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -432,6 +432,8 @@ set ( SOURCES
    pluss.cpp
 #eulerian
    stirling.cpp
+   gamma.cpp
+   tgamma.cpp
   )
 
 make_unit( "boost.simd.function.scalar"   ${SOURCES})
