--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -433,6 +433,8 @@ set ( SOURCES
    pluss.cpp
 #eulerian
    stirling.cpp
+   gamma.cpp
+   tgamma.cpp
   )
 
 make_unit( "boost.simd.function.scalar"   ${SOURCES})
