signgam computes the sign of the gamma function without computing gamma

--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -434,6 +434,7 @@ set ( SOURCES
    stirling.cpp
    gamma.cpp
    tgamma.cpp
+   signgam.cpp
   )
 
 make_unit( "boost.simd.function.scalar"   ${SOURCES})
