--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -443,6 +443,7 @@ set ( SOURCES
 #libc
    is_lessgreater.cpp
    is_normal.cpp
+   fabs.cpp
 )
 
 make_unit( "boost.simd.function.scalar"   ${SOURCES})
