--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -444,6 +444,7 @@ set ( SOURCES
    is_normal.cpp
    fabs.cpp
    fpclassify.cpp
+   signbit.cpp
 )
 
 make_unit( "boost.simd.function.scalar"   ${SOURCES})
