adding signbit for is_negative alias and correction remainder to fit standard

--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -445,6 +445,7 @@ set ( SOURCES
    is_normal.cpp
    fabs.cpp
    fpclassify.cpp
+   signbit.cpp
 )
 
 make_unit( "boost.simd.function.scalar"   ${SOURCES})
