--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "doc/html"]
 	path = doc/html
-	url = git@github.com:NumScale/boost.simd.git
+	url = https://github.com/NumScale/boost.simd.git
 	branch = gh-pages
