--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,9 +5,10 @@
 ##                        See accompanying file LICENSE.txt or copy at
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
-include(setup)
-include(make_unit)
-include(make_coverage)
+
+include(${CMAKE_CURRENT_LIST_DIR}/setup.cmake)
+NS_include(make_unit)
+NS_include(make_coverage)
 
 set(CMAKE_BUILD_TYPE "Debug")
 
