Add manual dependency for BOOST_DISPATCH and BOOST_HEADER_ONLY

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,10 @@ set(BRIGAND_STANDALONE_DESTINATION ${PROJECT_SOURCE_DIR}/include/boost/simd/deta
 NS_project_include(brigand.standalone)
 NS_project_include(stf.standalone)
 if (DEFINED USE_SELF_BOOST)
+  if (DEFINED CMAKE_INSTALL_PREFIX)
+    NS_project_global_destination(${CMAKE_INSTALL_PREFIX})
+  endif()
+
   set(BOOST_HEADER_ONLY_GIT_TAG develop)
   NS_project_include(boost-header-only)
 
@@ -68,6 +72,7 @@ if (DEFINED USE_SELF_BOOST)
     CMAKE_ARGS "-DBOOST_ROOT=${BOOST_HEADER_ONLY_DESTINATION}/include"
   )
   NS_project_include(boost.dispatch)
+  add_dependencies(BOOST_DISPATCH BOOST_HEADER_ONLY)
   set(Boost_INCLUDE_DIRS
     ${BOOST_DISPATCH_DESTINATION}/include
     ${BOOST_HEADER_ONLY_DESTINATION}/include
