Add more dependency for update.boost.dispatch + Fix install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,10 +57,6 @@ set(BRIGAND_STANDALONE_DESTINATION ${PROJECT_SOURCE_DIR}/include/boost/simd/deta
 NS_project_include(brigand.standalone)
 NS_project_include(stf.standalone)
 if (DEFINED USE_SELF_BOOST)
-  if (DEFINED CMAKE_INSTALL_PREFIX)
-    NS_project_global_destination(${CMAKE_INSTALL_PREFIX})
-  endif()
-
   set(BOOST_HEADER_ONLY_GIT_TAG develop)
   NS_project_include(boost-header-only)
 
@@ -73,6 +69,8 @@ if (DEFINED USE_SELF_BOOST)
   )
   NS_project_include(boost.dispatch)
   add_dependencies(BOOST_DISPATCH BOOST_HEADER_ONLY)
+  add_dependencies(BOOST_DISPATCH-install BOOST_HEADER_ONLY)
+  add_dependencies(update.boost.dispatch update.boost-header-only)
   set(Boost_INCLUDE_DIRS
     ${BOOST_DISPATCH_DESTINATION}/include
     ${BOOST_HEADER_ONLY_DESTINATION}/include
@@ -89,6 +87,9 @@ endif()
 ## Install target
 ## -------------------------------------------------------------------------------------------------
 install(DIRECTORY ${PROJECT_SOURCE_DIR}/include DESTINATION .)
+if (DEFINED USE_SELF_BOOST)
+  install(DIRECTORY ${NS_CMAKE_EXTERNAL_PROJECTS_DESTINATION}/include DESTINATION .)
+endif()
 
 ## Add include directories
 ## -------------------------------------------------------------------------------------------------
