--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
+##===================================================================================================
+##                 Copyright 2015   NumScale SAS
+##
+##                   Distributed under the Boost Software License, Version 1.0.
+##                        See accompanying file LICENSE.txt or copy at
+##                            http://www.boost.org/LICENSE_1_0.txt
+##===================================================================================================
 sudo: false
 language: cpp
 
@@ -113,6 +120,6 @@ before_script:
 # Build unit and run test
 script:
   - make update.boost-header-only | grep -v "^-- Install" # Silent installation
-  - make update.boost.dispatch
+  - make update.boost.dispatch    | grep -v "^-- Install" # Silent installation
   - make -k unit
   - ctest -D Experimental
