SIMD constant first test

--- a/test/constant/CMakeLists.txt
+++ b/test/constant/CMakeLists.txt
@@ -7,3 +7,4 @@
 ##===================================================================================================
 
 add_subdirectory(scalar)
+add_subdirectory(simd)
