upgrade for pack

--- a/test/api/meta/CMakeLists.txt
+++ b/test/api/meta/CMakeLists.txt
@@ -11,6 +11,7 @@ set ( SOURCES
       downgrade.cpp
       is_scalar.cpp
       logical.cpp
+      upgrade.cpp
     )
 
 make_unit( "boost.simd.api.meta" ${SOURCES})
