pack range ctor amended and tested

--- a/test/api/pack/ctor/CMakeLists.txt
+++ b/test/api/pack/ctor/CMakeLists.txt
@@ -7,7 +7,7 @@
 ##===================================================================================================
 
 set ( SOURCES
-      list.cpp
+#      list.cpp
       default.cpp
       pointer.cpp
       iterator.cpp
