--- a/test/sdk/CMakeLists.txt
+++ b/test/sdk/CMakeLists.txt
@@ -7,6 +7,7 @@
 ##===================================================================================================
 
 set ( SOURCES
+      as_arithmetic.cpp
       as_logical.cpp
       masked.cpp
       real_of.cpp
