insert dynamic and static

--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -7,6 +7,7 @@
 ##===================================================================================================
 
 set ( SOURCES
+   insert.cpp
    horner.cpp
    horn.cpp
    horn1.cpp
