--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -8,14 +8,12 @@
 
 set ( SOURCES
   aligned_load.cpp
+  aligned_store.cpp
   extract.cpp
   insert.cpp
   load.cpp
-<<<<<<< Updated upstream
   splat.cpp
-=======
   store.cpp
->>>>>>> Stashed changes
 )
 
 make_unit( "boost.simd.function.simd"   ${SOURCES})
