Generalize automap + Refactor + Cosmetic

--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -14,7 +14,7 @@ set ( SOURCES
   load.cpp
   splat.cpp
   store.cpp
-  map_identity.cpp
+  automap.cpp
 )
 
 make_unit( "boost.simd.function.simd"   ${SOURCES})
