Base implementation for genmask on logical+emulation

--- a/test/function/simd/genmask/CMakeLists.txt
+++ b/test/function/simd/genmask/CMakeLists.txt
@@ -6,22 +6,10 @@
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
 
-## Larger test suites go there
-add_subdirectory(extract)
-add_subdirectory(genmask)
-
 set ( SOURCES
-  aligned_load.cpp
-  aligned_store.cpp
-  insert.cpp
-  load.cpp
-  make.cpp
-  splat.cpp
-  store.cpp
-  automap.cpp
-  autofold.cpp
-  autosplat.cpp
+  arithmetic.cpp
+  logical.cpp
 )
 
-make_unit( "boost.simd.function.simd"   ${SOURCES})
-make_coverage("boost.simd.function.simd"  ${SOURCES})
+make_unit( "boost.simd.function.simd.genmask"   ${SOURCES})
+make_coverage("boost.simd.function.simd.genmask"  ${SOURCES})
