--- a/test/api/helper/CMakeLists.txt
+++ b/test/api/helper/CMakeLists.txt
@@ -1,11 +1,15 @@
 ##===================================================================================================
-##                 Copyright 2012 - 2015   NumScale SAS
+##                               Copyright 2016  NumScale SAS
 ##
 ##                   Distributed under the Boost Software License, Version 1.0.
 ##                        See accompanying file LICENSE.txt or copy at
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
 
-add_subdirectory(helper)
-add_subdirectory(meta)
-add_subdirectory(pack)
+set ( SOURCES
+      logical.cpp
+      mask.cpp
+    )
+
+make_unit( "boost.simd.api.helper" ${SOURCES})
+make_coverage("boost.simd.api.helper" ${SOURCES})
