Amend test for pack<T,1>

--- a/test/api/pack/proxy/CMakeLists.txt
+++ b/test/api/pack/proxy/CMakeLists.txt
@@ -1,19 +1,20 @@
 ##===================================================================================================
-##                              Copyright 2016 NumScale SAS
+##                               Copyright 2016   NumScale SAS
 ##
 ##                   Distributed under the Boost Software License, Version 1.0.
 ##                        See accompanying file LICENSE.txt or copy at
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
 
-add_subdirectory(ctor)
-add_subdirectory(proxy)
-
 set ( SOURCES
-      concepts.cpp
-      hierarchy.cpp
-      iterators.cpp
+      cast.cpp
+      comparison.cpp
+      divides.cpp
+      minus.cpp
+      multiplies.cpp
+      not.cpp
+      plus.cpp
     )
 
-make_unit( "api.pack" ${SOURCES})
-make_coverage("api.pack" ${SOURCES})
+make_unit( "api.pack.proxy" ${SOURCES})
+make_coverage("api.pack.proxy" ${SOURCES})
