--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -15,50 +15,18 @@ add_subdirectory(make)
 add_subdirectory(splat)
 
 set ( SOURCES
-#correct_fma.cpp TODO
-#divceil
-#divfix
-#divfloor
-#divround
-#fma.cpp TODO
-#fms.cpp TODO
-#fnma.cpp TODO
-#fnms.cpp ODO
-#idivceil.cpp
-#idivfix.cpp
-#idivfloor.cpp
-#idivround.cpp
-#interleave_even.cpp
-#interleave_odd.cpp
-#logical_and.cpp
-#logical_andnot.cpp
-#logical_notand.cpp
-#logical_notor.cpp
-#logical_or.cpp
-#logical_ornot.cpp
-#mod.cpp   TODO
-#muls.cpp  TODO
-#rem.cpp TODO
-#rem_pio2.cpp TODO waitin for map
-#rol.cpp
-#ror.cpp
-#rrol.cpp TODO
-#rror.cpp TODO
-#splatted_maximum.cpp//TODO all_reduce
-#splatted_minimum.cpp
-#twopower.cpp //TODO shift_left multi index
 abs.cpp
 abss.cpp
 adds.cpp
 aligned_load.cpp
 aligned_store.cpp
-all.cpp
-any.cpp
 arg.cpp
 autofold.cpp
 automap.cpp
 autosplat.cpp
 average.cpp
+bitfloating.cpp
+bitinteger.cpp
 bitget.cpp
 bitset.cpp
 bitwise_and.cpp
@@ -72,29 +40,24 @@ bitwise_xor.cpp
 broadcast.cpp
 ceil.cpp
 clz.cpp
-compare_equal.cpp
-compare_greater.cpp
-compare_greater_equal.cpp
-compare_less.cpp
-compare_less_equal.cpp
-compare_not_equal.cpp
 complement.cpp
 conj.cpp
 copysign.cpp
 ctz.cpp
-deinterleave_first.cpp
-deinterleave_second.cpp
 dist.cpp
 dists.cpp
 divides.cpp
 divs.cpp
-dot.cpp
 exp.cpp
 enumerate.cpp
 ffs.cpp
 firstbitset.cpp
 firstbitunset.cpp
 floor.cpp
+fma.cpp
+fms.cpp
+fnma.cpp
+fnms.cpp
 frac.cpp
 frexp.cpp
 genmaskc.cpp
@@ -103,6 +66,7 @@ hmsb.cpp
 hypot.cpp
 iceil.cpp
 if_allbits_else.cpp
+if_else_allbits.cpp
 if_else.cpp
 if_else_zero.cpp
 ifloor.cpp
@@ -110,15 +74,16 @@ ifnotadd.cpp
 ifnotdec.cpp
 ifnotinc.cpp
 ifnotsub.cpp
+if_one_else_zero.cpp
+if_zero_else.cpp
+if_zero_else_one.cpp
 ilog2.cpp
 ilogb.cpp
 inbtrue.cpp
 indeg.cpp
 inrad.cpp
-interleave_first.cpp
-interleave_second.cpp
-iround.cpp
 iround2even.cpp
+iround.cpp
 is_denormal.cpp
 is_equal.cpp
 is_equal_with_equal_nans.cpp
@@ -133,8 +98,7 @@ is_greater_equal.cpp
 is_gt.cpp
 is_gtz.cpp
 is_imag.cpp
-is_included.cpp
-is_included_c.cpp
+is_invalid.cpp
 is_inf.cpp
 is_le.cpp
 is_less.cpp
@@ -172,6 +136,14 @@ is_real.cpp
 is_unord.cpp
 ldexp.cpp
 lo.cpp
+logical_and.cpp
+logical_andnot.cpp
+logical_notand.cpp
+logical_not.cpp
+logical_notor.cpp
+logical_or.cpp
+logical_ornot.cpp
+logical_xor.cpp
 lookup.cpp
 majority.cpp
 mantissa.cpp
@@ -194,29 +166,21 @@ negatenz.cpp
 negif.cpp
 negifnot.cpp
 negs.cpp
-next.cpp
 nextafter.cpp
-none.cpp
+next.cpp
 oneminus.cpp
 oneplus.cpp
 plus.cpp
 posmax.cpp
 posmin.cpp
-pow2.cpp
 predecessor.cpp
 prev.cpp
 rec.cpp
-rem_pio2_cephes.cpp
-rem_pio2_medium.cpp
-rem_pio2_straight.cpp
 remquo.cpp
-repeat_lower_half.cpp
-repeat_upper_half.cpp
-reverse.cpp
 reversebits.cpp
+reverse.cpp
 round.cpp
 round2even.cpp
-rsqrt.cpp
 safe_max.cpp
 safe_min.cpp
 seladd.cpp
@@ -229,11 +193,11 @@ sign.cpp
 significants.cpp
 signnz.cpp
 sort.cpp
-sqr.cpp
 sqr_abs.cpp
+sqr.cpp
 sqrs.cpp
-sqrt.cpp
 sqrt1pm1.cpp
+sqrt.cpp
 store.cpp
 subs.cpp
 successor.cpp
@@ -247,7 +211,56 @@ two_split.cpp
 ulpdist.cpp
 unary_minus.cpp
 unary_plus.cpp
->>>>>>> Complete SSEx implementation
+
+#all.cpp
+#any.cpp
+#compare_equal.cpp
+#compare_greater.cpp
+#compare_greater_equal.cpp
+#compare_less.cpp
+#compare_less_equal.cpp
+#compare_not_equal.cpp
+#correct_fma.cpp TODO
+#divceil
+#divfix
+#divfloor
+#divround
+#fma.cpp TODO
+#fms.cpp TODO
+#fnma.cpp TODO
+#fnms.cpp ODO
+#idivceil.cpp
+#idivfix.cpp
+#idivfloor.cpp
+#idivround.cpp
+#interleave_even.cpp
+#interleave_odd.cpp
+#is_included_c.cpp
+#is_included.cpp
+#mod.cpp
+#muls.cpp
+#none
+#rem.cpp TODO
+#rem_pio2.cpp TODO waitin for map
+#rol.cpp
+#ror.cpp
+#rrol.cpp TODO
+#rror.cpp TODO
+#splatted_maximum.cpp//TODO all_reduce
+#splatted_minimum.cpp
+#twopower.cpp //TODO shift_left multi index
+####deinterleave_first.cpp
+####deinterleave_second.cpp
+####dot.cpp
+####interleave_first.cpp
+####interleave_second.cpp
+####pow2.cpp
+####rem_pio2_cephes.cpp
+####rem_pio2_medium.cpp
+####rem_pio2_straight.cpp
+####repeat_lower_half.cpp
+####repeat_upper_half.cpp
+####rsqrt.cpp
 )
 
 make_unit( "boost.simd.function.simd"  ${SOURCES})
